deployment/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cicd
  labels:
    name: cicd
