deployment/jenkins.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins-master
  labels:
    name: jenkins-master
    app: jenkins-master
spec:
  serviceName: jenkins-master
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-master
  template:
    metadata:
      labels:
        app: jenkins-master
    spec:
      shareProcessNamespace: true
      containers:
        - name: jenkins-master
          image: saidsef/alpine-jenkins-dockerfile:latest
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 8080
              name: tcp-jenkins
            - protocol: TCP
              containerPort: 50000
              name: tcp-agent
          volumeMounts:
            - name: jenkins-storage
              mountPath: /var/jenkins_home/logs
              subPath: logs
            - name: jenkins-storage
              mountPath: /var/jenkins_home/jobs
              subPath: jobs
            - name: jenkins-storage
              mountPath: /var/jenkins_home/cache
              subPath: cache
            - name: jenkins-storage
              mountPath: /var/jenkins_home/jenkins-jobs
              subPath: jenkins-jobs
            - name: jenkins-storage
              mountPath: /var/jenkins_home/builds
              subPath: builds
            - name: jenkins-storage
              mountPath: /var/jenkins_home/secrets
              subPath: secrets
          livenessProbe:
            exec:
              command:
                - pgrep
                - java
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 3
          readinessProbe:
            tcpSocket:
                port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            requests:
              cpu: "500m"
              memory: "2048Mi"
            limits:
              cpu: "900m"
              memory: "2048Mi"
          securityContext:
            allowPrivilegeEscalation: false
            runAsGroup: 1000
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
                - NET_RAW
                - SYS_TIME
      volumes:
        - name: jenkins-storage
          hostPath:
            path: /mnt/jenkins
            type: DirectoryOrCreate
