deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: cicd
  labels:
    name: jenkins
    app: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: jenkins
    - port: 5000
      protocol: TCP
      targetPort: 5000
      name: agent
